[metadata]
name = jdmn-python-runtime
version = attr: jdmn.__version__
description = jdmn-python-runtime is a library that supports the execution of DMN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/goldmansachs/jdmn-python-runtime
author = Octavian Patrascoiu
author_email = opatrascoiu@yahoo.com
maintainer = Octavian Patrascoiu
maintainer_email = opatrascoiu@yahoo.com
license = Apache 2.0
license_files =
    LICENSE.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10

[project.urls]
"Homepage" = "https://github.com/goldmansachs/jdmn-python-runtime"
"Issues" = "https://github.com/goldmansachs/jdmn-python-runtime/issues"

[options]
packages = find:
package_dir =
    =src
install_requires =
    isodate
tests_requires =
    # framework that makes it easy to write small tests
    pytest>=7.1.2
    # allows generation of coverage reports with pytest
    pytest-cov>=3.0.0
    # checks style, syntax and other useful errors
    pylint>=2.14.5
    flake8>=4.0.1
    # tox ci framework
    tox>=3.25.1
include_package_data = True

python_requires = >=3.10

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

